# Foam-Agent

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  FAQ.md  README.md  environment.yml  foambench_main.py  init_database.py  opencode.json  pyproject.toml
.claude/agents/: foam-debugger.md
.claude/skills/foam-onboard/: SKILL.md
.claude/skills/foam-setup/: SKILL.md
.claude/skills/foam/references/: allrun-guide.md  error-playbook.md  file-generation.md  forces.md  hpc-slurm.md  openfoam-v10-conventions.md
.codex/: config.toml
.codex/skills/foam/: SKILL.md
.codex/skills/foam-onboard/: SKILL.md
.codex/skills/foam-runs/: SKILL.md
.codex/skills/foam-setup/: SKILL.md
.codex/skills/foam-setup/references/: doctor.py
.codex/skills/foam/references/: allrun-guide.md  mesh-quality.md  turbulence.md
.cursor/: mcp.json
.cursor/rules/: foamagent-skills.mdc
.cursor/skills/foam/: SKILL.md
.cursor/skills/foam-onboard/: SKILL.md
.cursor/skills/foam-runs/: SKILL.md
.cursor/skills/foam/references/: file-generation.md  multiphase-vof.md  openfoam-v10-conventions.md  turbulence.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  share-your-simulation.yml
.github/workflows/: ci.yml  docker-publish.yml  pr-title-lint.yml
.opencode/agent/: foam-debugger.md  foam-mesher.md  foam-visualizer.md
.opencode/skill/foam/: SKILL.md
.opencode/skill/foam-onboard/: SKILL.md
.opencode/skill/foam-runs/: SKILL.md
.opencode/skill/foam-setup/: SKILL.md
.opencode/skill/foam/references/: convergence.md  error-playbook.md  file-generation.md  mesh-quality.md  multiphase-vof.md  snappyhexmesh.md
.pi/skills/foam/: SKILL.md
.pi/skills/foam-setup/: SKILL.md
.pi/skills/foam/references/: convergence.md
agents/skills/foam/: SKILL.md
agents/skills/foam-onboard/: SKILL.md
agents/skills/foam-runs/: SKILL.md
agents/skills/foam-setup/: SKILL.md
agents/skills/foam/references/: allrun-guide.md  convergence.md  error-playbook.md  file-generation.md  forces.md  hpc-slurm.md  mesh-quality.md  multiphase-vof.md  openfoam-v10-conventions.md  snappyhexmesh.md  turbulence.md
agents/subagents/: foam-debugger.md  foam-mesher.md  foam-visualizer.md
config/: user.template.yml
database/script/: _faiss_build.py  faiss_allrun_scripts.py  faiss_command_help.py  faiss_tutorials_details.py  faiss_tutorials_structure.py
docker/: Dockerfile  foamagent-entrypoint.sh
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: doctor.py  extract_v10_case.py  init.py  ledger_check.py  runs.py  sync_agent_assets.py  verify_esi_translation.py
src/: convergence.py  forcecoeffs.py  ledger.py  mechanics.py  meshcheck.py  models.py  stlcheck.py  text_utils.py  turbinlet.py  utils.py  wallspacing.py
src/mcp/: README.md  cli.py  fastmcp_server.py
src/services/: visualization.py
src/translation/: esi_translator.py
tests/: test_assess_mesh_unit.py  test_background_run.py  test_convergence_parser_unit.py  test_doctor_unit.py  test_esi_translator.py  test_faiss_build.py  test_forcecoeffs_unit.py  test_init_unit.py  test_inspect_stl_unit.py  test_ledger_check_unit.py  test_ledger_lifecycle.py  test_ledger_note_unit.py  test_ledger_unit.py  test_lid_driven_cavity_mcp.py  test_mcp_helpers.py  test_mechanics_unit.py  test_run_sourced.py  test_runs_list_unit.py  test_turbulence_inlet_unit.py  test_wall_spacing_unit.py
tests/fixtures/checkmesh/geometry_failed/: log.checkMesh
tests/fixtures/checkmesh/ok/: log.checkMesh
tests/fixtures/checkmesh/topology_failed/: log.checkMesh
tests/fixtures/checkmesh/warnings/: log.checkMesh
tests/fixtures/convergence/converged/: Allrun.out  log.blockMesh  log.icoFoam
tests/fixtures/convergence/diverged/: log.icoFoam
tests/fixtures/convergence/fatal/: log.icoFoam
tests/fixtures/convergence/fpe/: log.icoFoam
tests/fixtures/convergence/incomplete/: log.icoFoam
tests/fixtures/stl/: README.md  cube_mm.stl  gen_stl.py  open_box.stl  two_shells.stl  watertight_cube.stl
tests/fixtures/surfacecheck/: README.md
tests/fixtures/surfacecheck/mm_scaled/: log.surfaceCheck
(+14 files in other folders)
