[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamagent"
version = "3.0.0"
description = "Multi-agent framework that automates CFD simulations in OpenFOAM using natural language prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Foam-Agent Team"},
]
keywords = ["openfoam", "cfd", "mcp", "llm", "agent", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Core = the key-free MCP server: retrieval, execution, file I/O. No LLM SDKs.
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.7",
    "uvicorn>=0.30",
    "pyvista>=0.44",
]

[project.optional-dependencies]
# The legacy LangGraph pipeline (foambench_main.py) does its own LLM calls.
pipeline = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-aws>=0.2",
    "langgraph>=0.2",
    "openai>=1.0",
    "anthropic>=0.20",
    "tiktoken>=0.7",
    "boto3",
    "requests",
]
hpc = ["boto3"]
ollama = ["langchain-ollama>=0.3", "ollama>=0.4"]
bedrock = ["langchain-aws>=0.2", "boto3"]
all = ["foamagent[pipeline,hpc,ollama,bedrock]"]

[project.scripts]
foamagent-mcp = "src.mcp.cli:main"

[project.urls]
Homepage = "https://github.com/csml-rpi/Foam-Agent"
Repository = "https://github.com/csml-rpi/Foam-Agent"
Issues = "https://github.com/csml-rpi/Foam-Agent/issues"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that read the full RAG tutorial database",
]
