[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamagent"
version = "3.0.0"
description = "Multi-agent framework that automates CFD simulations in OpenFOAM using natural language prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Foam-Agent Team"},
]
keywords = ["openfoam", "cfd", "mcp", "llm", "agent", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Core = the key-free MCP server: retrieval, execution, file I/O. No LLM SDKs.
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.7",
    "uvicorn>=0.30",
    "pyvista>=0.44",
    # vtk 9.3.x was validated against the numpy 1.x line; keep until vtk is bumped
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
ollama = ["langchain-ollama>=0.3", "ollama>=0.4"]
# In-container toolbox for run_python_script (GMSH meshing, plotting, data wrangling).
tools = [
    "gmsh>=4.13",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scipy>=1.10",
    "imageio>=2.30",
]
all = ["foamagent[ollama,tools]"]

[project.scripts]
foamagent-mcp = "src.mcp.cli:main"

[project.urls]
Homepage = "https://github.com/csml-rpi/Foam-Agent"
Repository = "https://github.com/csml-rpi/Foam-Agent"
Issues = "https://github.com/csml-rpi/Foam-Agent/issues"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that read the full RAG tutorial database",
]
